<resources>
    <string name="app_name">LeaagueList</string>
    <string name="league_list">League List</string>
    <string name="back">Back</string>
    <string-array name="liga_name">
        <item>English Premier League</item>
        <item>French Ligue 1</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
        <item>Spanish La Liga</item>
        <item>American Mayor League</item>
        <item>Protugeuese Premiera Liga</item>
        <item>Australian A League</item>
        <item>Scotish Premier League</item>
        <item>English League 1</item>
    </string-array>

    <string-array name="liga_id">
        <item>4328</item>
        <item>4334</item>
        <item>4331</item>
        <item>4332</item>
        <item>4335</item>
        <item>4346</item>
        <item>4344</item>
        <item>4356</item>
        <item>4330</item>
        <item>4396</item>
    </string-array>

    <array name="liga_image">
        <item>@drawable/satu_english_premier_league</item>
        <item>@drawable/dua_french_ligue_1</item>
        <item>@drawable/tiga_german_bundesliga</item>
        <item>@drawable/empat_italian_serie_a</item>
        <item>@drawable/lima_spanish_la_liga</item>
        <item>@drawable/enam_american_mayor_league</item>
        <item>@drawable/tujuh_portugeuese_premiera_liga</item>
        <item>@drawable/delapan_australian_a_league</item>
        <item>@drawable/sembilan_scotish_premier_league</item>
        <item>@drawable/sepuluh_english_league_1</item>
    </array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_event">Event</string>
    <string name="website">Website</string>
    <string name="vs">VS</string>
    <string name="goals">Goals</string>
    <string name="shots">Shots</string>
    <string name="lineups">Line Ups</string>
    <string name="defense">Defense</string>
    <string name="midfield">Midfield</string>
    <string name="forward">Forward</string>
    <string name="subtitutes">Subtitutes</string>
    <string name="todo">TODO</string>
    <string name="pastEvent">Past Event</string>
    <string name="nextEvent">Next Event</string>
    <string name="favorites">Favorites</string>
    <string name="search">Search</string>
</resources>
