<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorBg"
    android:layout_width="match_parent"
    android:layout_marginTop="@dimen/margin_10"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:text="Hello World!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:background="@drawable/border"
            android:padding="@dimen/margin_10"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/margin_10"
            android:layout_height="wrap_content">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/colorBg"
                android:id="@+id/btnMenuFavorite"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_added_to_favorites"
                tools:ignore="InvalidId"
                android:contentDescription="@string/todo" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favorites"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_8"
            android:text="@string/league_list"
            android:textColor="#000"
            android:textSize="@dimen/sp_22" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_league"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>