<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeRefreshEvent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".detail_event.DetailEventActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progressBarDetailEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:visibility="invisible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_10"
                app:cardCornerRadius="@dimen/dip_20">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/padding_5">

                    <TextView
                        android:id="@+id/tvDetailEventDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp_16"
                        tools:text="date" />

                    <TextView
                        android:id="@+id/tvDetailEventTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp_12"
                        tools:text="time" />


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:orientation="vertical"
                            android:padding="@dimen/padding_5">

                            <ImageView
                                android:id="@+id/ivDetailEventHome"
                                android:layout_width="@dimen/dip_100"
                                android:layout_height="@dimen/dip_100"
                                android:layout_gravity="center"
                                android:contentDescription="@string/todo"
                                android:padding="@dimen/margin_10" />

                            <TextView
                                android:id="@+id/tvDetailEventHome"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:textSize="@dimen/sp_16" />

                            <TextView
                                android:id="@+id/tvDetailEventHomeFormation"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center" />
                        </LinearLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="@string/vs"
                            android:textColor="@color/colorAccent" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:orientation="vertical"
                            android:padding="@dimen/padding_5">

                            <ImageView
                                android:id="@+id/ivDetailEventAway"
                                android:layout_width="@dimen/dip_100"
                                android:layout_height="@dimen/dip_100"
                                android:layout_gravity="center"
                                android:contentDescription="@string/todo"
                                android:padding="@dimen/margin_10" />

                            <TextView
                                android:id="@+id/tvDetailEventAway"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:textSize="@dimen/sp_16" />

                            <TextView
                                android:id="@+id/tvDetailEventAwayFormation"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_10"
                android:orientation="vertical"
                android:padding="@dimen/margin_10">

                <LinearLayout
                    android:id="@+id/linearGoal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/margin_10"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvDetailHomeGoal"
                        android:layout_width="@dimen/padding_0"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="start" />

                    <TextView
                        android:layout_width="@dimen/padding_0"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/goals"
                        android:textColor="@color/colorAccent" />

                    <TextView
                        android:id="@+id/tvDetailAwayGoal"
                        android:layout_width="@dimen/padding_0"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearShots"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/margin_10"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvDetailHomeShots"
                        android:layout_width="@dimen/padding_0"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="start" />

                    <TextView
                        android:layout_width="@dimen/padding_0"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/shots"
                        android:textColor="@color/colorAccent" />

                    <TextView
                        android:id="@+id/tvDetailAwayShots"
                        android:layout_width="@dimen/padding_0"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end" />
                </LinearLayout>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:padding="@dimen/padding_5"
                            android:text="@string/lineups" />
                </TableLayout>

                <LinearLayout
                    android:id="@+id/linearDefense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/margin_10"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvDetailHomeDefense"
                        android:layout_width="@dimen/padding_0"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="start" />

                    <TextView
                        android:layout_width="@dimen/padding_0"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/defense"
                        android:textColor="@color/colorAccent" />

                    <TextView
                        android:id="@+id/tvDetailAwayDefense"
                        android:layout_width="@dimen/padding_0"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearMidfield"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/margin_10"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvDetailHomeMidfield"
                        android:layout_width="@dimen/padding_0"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="start" />

                    <TextView
                        android:layout_width="@dimen/padding_0"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/midfield"
                        android:textColor="@color/colorAccent" />

                    <TextView
                        android:id="@+id/tvDetailAwayMidfield"
                        android:layout_width="@dimen/padding_0"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearForward"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/margin_10"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvDetailHomeForward"
                        android:layout_width="@dimen/padding_0"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="start" />

                    <TextView
                        android:layout_width="@dimen/padding_0"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/forward"
                        android:textColor="@color/colorAccent" />

                    <TextView
                        android:id="@+id/tvDetailAwayForward"
                        android:layout_width="@dimen/padding_0"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearSubtitutes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/margin_10"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvDetailHomeSubtitutes"
                        android:layout_width="@dimen/padding_0"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="start" />

                    <TextView
                        android:layout_width="@dimen/padding_0"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/subtitutes"
                        android:textColor="@color/colorAccent" />

                    <TextView
                        android:id="@+id/tvDetailAwaySubtitutes"
                        android:layout_width="@dimen/padding_0"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</android.support.v4.widget.SwipeRefreshLayout>